fixed file open with spaces on unix platforms